fix: 修复多个bug并优化导出与仓库路径显示
- 修复密码二次哈希（status切换只传id+status）
- 修复禁用用户未被踢下线（每次请求校验用户状态）
- 修复调拨单详情字段名错误（out/in → from/to）
- 修复盘点数量重置问题
- 修复商品作废被历史单据阻断、恢复功能失效
- 修复商品分类缺少createTime/updateTime
- 新增仓库上级路径显示（采购/销售/调拨/盘点/仪表盘）
- 新增小程序图片骨架加载
- 重构导出功能：汇总sheet + 各单据明细sheet + 批量查询优化
- 新增密码确认弹窗、删除账号保护
- 图片服务改为Controller接口（解决路径不一致问题）
- 登录token永不过期
- 清理冗余文件和旧SQL脚本